Update 7.11 Account Editior
Added feature to edit accounts
Added feature to delete account
Accounts Collection Array was migrated to List
Added Account Status

--- a/AppData/WindowsFormsApp1/Main.resx
+++ b/AppData/WindowsFormsApp1/Main.resx
@@ -121,7 +121,7 @@
     <value>True</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="Button1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="logInButton.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAbYAAAA3CAYAAABgkm+5AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
         EwAACxMBAJqcGAAAB5NJREFUeF7t3L+PE0cYh/H8m9Rp0yYtLVSRiJQG6EIaIiUiTaCDNEg5iYpLRWhA
